# rstracer

./: .gitignore  Cargo.toml  output.ppm  outputx.ppm  rough
.cargo/: config.toml
src/: aabb.rs  bvhnode.rs  camera.rs  cone.rs  cube.rs  cylinder.rs  dielectric.rs  hitrecord.rs  kdnode.rs  kdtree.rs  lambertian.rs  light.rs  main.rs  material.rs  metal.rs  ray.rs  scene.rs  sphere.rs  texture.rs  transform.rs  util.rs
