[package]
name = "rtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
nalgebra = "0.27.1"
image = "0.23.14"
rayon = "1.5.1"
rand = "0.8.5"
