[package]
name = "rtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
rpath = true
target-cpu = "native"
debug = true


[dependencies]
nalgebra = "0.32.2"
image = "0.24.6"
rayon = "1.7.0"
rand = "0.8.5"
mimalloc = { version = "0.1.17", default-features = false }
noise = "0.8.2"

